--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Weaving is Communal</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="STYLE.CSS">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 <DIV class="parentdiv"> 
@@ -17,7 +17,7 @@
     <button class="communalweavebutton">G</button>
   </a>
   
-
+ 
   
 
 <div class="navigationdiv"> 
